# agtop

./: .gitignore  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  GUIDE-cicd-release.md  GUIDE-homebrew-bottling.md  GUIDE-release-operations.md  LICENSE  README.md  REVIEW-architecture-comparison.md  SECURITY.md  TODO-agtop-improvements.md  TODO-btop-inspired-enhancements.md  TODO-python-api-refactor.md  TODO-refactor-syscalls.md  TODO.md  fix-ruff-violations.md  pyproject.toml  setup.py  todo-agtop-hard-fork-migration.md  todo-cli-best-practice-plan.md  todo-truecolor-gradient-rendering.md
.claude/skills/audit-conformance/: SKILL.md
.claude/skills/run-actop/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-bottle.yml  main-ci.yml  main-push.yml  publish-pypi.yml  release-formula.yml
Formula/: agtop.rb  asitop.rb  silitop.rb
actop/: __init__.py  actop.py  api.py  config.py  export.py  gpu_registry.py  ioreport.py  models.py  native_sys.py  power_scaling.py  sampler.py  smc.py  soc_profiles.py  utils.py
actop/tui/: app.py  widgets.py
agtop/: __init__.py  agtop.py  api.py  color_modes.py  config.py  experimental_gradient.py  export.py  gradient.py  input.py  ioreport.py  models.py  native_sys.py  parsers.py  sampler.py  state.py  updaters.py  utils.py
agtop/tui/: app.py  styles.tcss  widgets.py
asitop/: asitop.py  power_scaling.py  soc_profiles.py  utils.py
docs/: DESIGN-cicd-release.md  DESIGN-sdlc-cicd-release.md  DESIGN-system.md  GUIDE-cicd-release.md  GUIDE-launch-and-growth.md  REVIEW-architecture-comparison.md  REVIEW-tui-frameworks.md  RUNBOOK-launch-and-growth.md  SPIKE-ioreport-dcs-bandwidth.md  TODO-actop-feature-gap-roadmap.md  TODO-actop-rename-and-roadmap.md  TODO-architecture-roadmap.md  TODO-code-review.md  TODO-conformance-2026-07-01.md  TODO-metric-coverage.md  TODO-native-polling.md  TODO-t1-per-process-power.md  TODO-tui-modernization.md
scratch/: test_sysctl.py  test_sysctl_gpu.py  test_sysctl_perf.py
scripts/: ane_load.py  release_prepare.py  tag_release.sh  update_formula.py
tests/: conftest.py  test_api.py  test_braille_chart_render.py  test_chart_rendering.py  test_cli_contract.py  test_cli_runtime_failures.py  test_color_modes.py  test_config.py  test_dashboard_metrics.py  test_dashboard_stats.py  test_e2e.py  test_export.py  test_input.py  test_integration.py  test_ioreport.py  test_native_sys.py  test_parsers_resilience.py  test_per_process_power.py  test_power_scaling.py  test_powermetrics_resilience.py  test_runtime_contracts.py  test_sampler.py  test_scaling_logic.py  test_smc.py  test_soc_profiles.py  test_state.py  test_tui_app.py  test_tui_layout_toggle.py  test_updaters.py  test_utils.py
