[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agtop"
version = "0.8.0"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "binlecode", email = "bin.le.code@gmail.com" },
]
keywords = ["agtop", "apple-silicon", "ioreport", "performance-monitor"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
]
dependencies = [
  "textual>=0.60",
  "psutil",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
pandas = ["pandas>=1.3"]

[project.urls]
Homepage = "https://github.com/binlecode/agtop"
Repository = "https://github.com/binlecode/agtop"

[project.scripts]
agtop = "agtop.agtop:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "local: macOS-only tests requiring IOReport, vm_stat, or Apple Silicon hardware",
]

[tool.setuptools.packages.find]
include = ["agtop*"]
