[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "actop"
version = "1.0.0"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "binlecode", email = "bin.le.code@gmail.com" },
]
keywords = ["actop", "apple-silicon", "ioreport", "performance-monitor"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
]
requires-python = ">=3.11,<3.15"
dependencies = [
  "textual>=0.60",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
pandas = ["pandas>=1.3"]

[project.urls]
Homepage = "https://github.com/binlecode/actop"
Repository = "https://github.com/binlecode/actop"

[project.scripts]
actop = "actop.actop:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "local: macOS-only tests requiring IOReport, vm_stat, or Apple Silicon hardware",
]

[tool.setuptools.packages.find]
include = ["actop*"]
